# arsenalpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
examples/: .env.example  deep_research.py  fastapi_agent.py  minimal_agent.py
src/: __init__.py
src/arsenalpy/: __init__.py
src/arsenalpy/agents/: __init__.py  agent.py  agent_config.py  types.py
src/arsenalpy/skills/: __init__.py  browse_skill.py  search_skill.py  skill_utils.py
tests/: __init__.py  test_agent.py  test_browse_skill.py  test_search_skill.py  test_skill_utils.py
